<resources>
    <string name="app_name">My Application</string>
    <string name="despesa">Despesa</string>
    <string name="receita">Receita</string>
    <string name="transa_es">Transações</string>
    <string name="r_0_00">USD$ </string>
    <string name="total_de_despesas">Total de Despesas</string>
    <string name="total_de_receitas">Total de Receitas</string>
    <string name="saldo_atual">Saldo Atual</string>
    <string name="dashboard">Dashboard</string>
    <string name="insira_o_t_tulo">Insira o título</string>
    <string name="t_tulo">Título</string>
    <string name="valor">Valor</string>
    <string name="insira_o_valor">Insira o valor</string>
    <string name="categoria">Categoria</string>
    <string name="data">Data</string>
    <string name="selecionar_data">Selecionar Data</string>
    <string name="nenhuma_data_selecionada">Nenhuma data selecionada</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="saldo">Saldo</string>
    <string name="earnings">Earnings</string>
    <string name="transactions">Transactions</string>
    <string name="expenses">Expenses</string>
    <string name="revenue">Revenue</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="balance">Balance</string>
    <string name="title">Title</string>
    <string name="insert_title">Insert title</string>
    <string name="value">Value</string>
    <string name="insert_value">Insert value</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="no_date_selected">No date selected</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>